tests/baselines/reference/duplicateDefaultExport.errors.txt
duplicateDefaultExport.ts(1,1): error TS2528: A module cannot have multiple default exports.
duplicateDefaultExport.ts(2,1): error TS2528: A module cannot have multiple default exports.


==== duplicateDefaultExport.ts (2 errors) ====
    export default 0;
    ~~~~~~~~~~~~~~~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 duplicateDefaultExport.ts:2:1: The first export default is here.
    export default function() {}
    ~~~~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 duplicateDefaultExport.ts:1:1: Another export default is here.
    